# speech-translate

./: CONVENTIONS.md  README.md  asr1.py  csv_process.py  csv_to_md.py  evaluation_results.csv  fy.py  google_tts.py  m2m100.py  m4t.py  m4t_pipeline.py  mbart.py  merge_csv_pandas.py  mt5.py  pyproject.toml  t5.py  translate.py  whisper.py  whisper_v3.py
test-data/: compare-20240925.csv  compoare-0925.csv
