[project]
name = "speech-translate"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
  "accelerate>=0.34.2",
  "datasets>=2.14.4",
  "evaluate>=0.4.3",
  "langcodes>=3.4.0",
  "librosa>=0.10.2.post1",
  "openai-whisper>=20231117",
  "protobuf>=5.28.2",
  "sacremoses>=0.1.1",
  "sentencepiece>=0.2.0",
  "torch>=2.3.1",
  "torchaudio>=2.3.1",
  "transformers>=4.44.2",
]
